# Cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
.past/2019-2020/: mainwindow.cpp  mainwindow.ui  untitled7.pro
.past/2019-2020/12st/: main.cpp
.past/2019-2020/13st/: main.cpp
.past/2019-2020/1st/: 1st.pro  main.cpp  math_1.h  math_2.h
.past/2019-2020/2st/: main.cpp
.past/2019-2020/4st/: main.cpp
.past/2019-2020/6st/: main.cpp
.past/2019-2020/8st/: main.cpp
.past/2019-2020/9st/: 9st.pro  mainwindow.ui  speech.h
.past/2019-2020/Project/: Project.pro  mainwindow.h  screendialog.cpp  screendialog.h  settdialog.cpp  settdialog.h  textdialog.h
.past/2019-2020/animation_2/: animation_2.pro  gameview.cpp  gameview.h  main.cpp  mainwindow.ui
.past/2019-2020/animation_3/: button.h
.past/2019-2020/animation_4/: animation_4.pro  button.h  mainwindow.cpp  mainwindow.h
.past/2019-2020/animation_5/: button.cpp  endpoint.cpp
.past/2019-2020/saper_05/: button.cpp  button.h  gameview.cpp  gameview.h  mainwindow.h  res.qrc  saper.pro
.past/2019-2020/sort/: main.cpp
.past/2019-2020/tables2/: main.cpp
.past/2019-2020/untitled8/: mainwindow.cpp  mainwindow.ui  marker.h  untitled8.pro
.past/2019-2020/wintest/: mainwindow.cpp  mainwindow.h  mainwindow.ui  wintest.pro
.past/2020-2021/: cmd sql 1.txt
.past/2020-2021/0/: main.cpp
.past/2020-2021/1/: widget.cpp
.past/2020-2021/10/: mainwindow.h
.past/2020-2021/11/: imageitem.h  mainwindow.h  mainwindow.ui
.past/2020-2021/13/: 13.pro  labelitem.cpp  labelitem.h  widget.cpp
.past/2020-2021/2/: widget.h
.past/2020-2021/4/: mainwindow.h
.past/2020-2021/5/: main.cpp
.past/2020-2021/6/: 7.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
.past/2020-2021/7/: widget.cpp
.past/2020-2021/9/: 9.pro  editor.h  mainwindow.cpp  mainwindow.ui
.past/2020-2021/9 old/: mainwindow.h  mainwindow.ui
.past/2020-2021/Game/: Game.pro  key.cpp  player.cpp  resourses.qrc  stylehelper.cpp  sword.cpp  widget.cpp  widget.h
.past/2020-2021/Game_23/: Game23.pro  defines.h  key.h  level2.txt  player.cpp  widget.h  widget.ui
.past/2020-2021/Game_8/: key.h  player.cpp  player.h  stylehelper.h  widget.h
.past/2020-2021/HomeworkInfo20_10_2021/: lines.cpp  lines.h
.past/2020-2021/database/: database.pro  widget.cpp  widget.ui
.past/2020-2021/outQC/: main.cpp
.past/2020-2021/projectMove/: myitem.h  widget.cpp
.past/2020-2021/untitled/: stylehelper.cpp  widget.ui
.past/2020-2021/win2/: dialog.h  dialog.ui  editor.h  mainwindow.cpp  mainwindow.h  resourses.qrc
1/: .clang-format  Untitled-1.cpp  calculator02buggy.cpp  cows_bulls.cpp  powerX.cpp  someTheory.cpp  squares2.cpp
1/001/: Untitled-1.cpp  fib.cpp
1/002/: powerX.cpp  squares.cpp  squares2.cpp
1/004/: cows_bulls.cpp  errorLesson.cpp
1/005/: calculator02buggy.cpp  eGrammar.cpp  someTheory.cpp  test.txt
1/006/: calculator08buggy.cpp  res_test.txt  test.txt
1/006-007/calculator/: CMakeLists.txt  calculator08.cpp  calculator08buggy.cpp  comments.txt  token.h  variable.h
1/008/vec2D/: vec2d.cpp  vec2d.h
1/009/: theory.cpp
1/009/logic_scheme/: lesson_theme.cpp  logic.h  logic_scheme.cpp
1/010/input_parcing/: LogicFliLesson.cpp
1/010/logic_elements/: CMakeLists.txt  logic.cpp  logic.h  main.cpp
1/011/: ReverseFile.cpp
1/012/shape_primitives/: CMakeLists.txt  main.cpp
1/013/fractals/: CMakeLists.txt  main.cpp
1/014-015/Graph_lib_inheritance/: main.cpp
1/014-015/inheritance_example/: inheritance.cpp  inheritance.h
1/014/Graph_lib_inheritance/: CMakeLists.txt  main.cpp
1/016-017/logic_scheme_inheritance/: ideas.txt  logic.cpp  logic.h
1/016/logic_scheme_inheritance/: ideas.txt  logic.cpp  logic.h
1/018/: theory.txt
1/018/least_squares/: least_squares.cpp  least_squares.h  main.cpp
1/019-020/chess_board/: CMakeLists.txt  board.cpp  board.h  main.cpp
1/019/cell_field/: board.cpp  board.h  cell.cpp  cell.h  main.cpp
1/020/chessboard/: board.cpp  board.h  cell.cpp  cell.h  checker.cpp  checker.h  main.cpp
1/021/pointer_lesson/: main.cpp  my_sort.cpp  my_sort.h  str_oper.cpp  str_oper.h
1/022/: theory.txt
1/022/list_lesson/: main.cpp
1/023/: crash.cpp
1/023/tracer_lesson/: main.cpp
1/024-025/: theory.txt
1/024-025/template_lesson/: CMakeLists.txt  main.cpp
1/024-025/template_lesson/E_testing/: E.cpp  E.h
1/024-025/template_lesson/counted_ptr/: counted.h
1/024-025/template_lesson/unique_ptr/: unique.h
1/027/: CMakeLists.txt  main.cpp  theory.txt
1/CALCULATOR/: CMakeLists.txt  Names.cpp  Names.h  Token.cpp  Token.h  Variable.h  calculator.cpp  calculator.h  calculator_globals.cpp  calculator_globals.h  const_kinds.h  grammar.txt  main_grammar_functions.cpp  main_grammar_functions.h  test.txt  test_ans.txt
1/NIM/: nim+.cpp  nim.cpp
2/1_SFML/: main.cpp
_past/2019-2020/11st/: main.cpp
_past/2019-2020/14st/: main.cpp
_past/2019-2020/3st/: main.cpp
_past/2019-2020/5st/: main.cpp
_past/2019-2020/7st/: main.cpp
_past/2019-2020/9st/: mainwindow.cpp  mainwindow.h  speech.cpp
_past/2019-2020/Project/: mainwindow.cpp  mainwindow.ui  screendialog.ui  settdialog.ui  textdialog.ui
_past/2019-2020/animation_1/: gameview.cpp  gameview.h  main.cpp
_past/2019-2020/animation_2/: mainwindow.cpp
_past/2019-2020/animation_3/: button.cpp  gameview.cpp  main.cpp
_past/2019-2020/animation_4/: button.cpp  gameview.h  main.cpp
_past/2019-2020/animation_5/: animation_5.pro  button.h  endpoint.h  gameview.cpp  main.cpp
_past/2019-2020/classes_2/: main.cpp
_past/2019-2020/saper_05/: mainwindow.cpp  mainwindow.ui
_past/2019-2020/untitled8/: mainwindow.h  paintscene.h
_past/2020-2021/1/: widget.h
_past/2020-2021/13/: widget.h  (+1 more)
lib/: std_lib_facilities.h
lib/Graph_lib/: GUI.cpp  GUI.h  Graph.cpp  Graph.h  Point.h  Simple_window.h  Window.cpp  Window.h
lib/Tracer_lib/: tracer.cpp  tracer.h
lib/Vector_lib/: poly.cpp  poly.h  vec2d.cpp  vec2d.h
semesters/1/023/tracer_lesson/: CMakeLists.txt
semesters/2/1_SFML/: CMakeLists.txt  main.cpp
semesters/2/smth/1_SFML/: CMakeLists.txt  main.cpp
(+160 files in other folders)
