# cmake.options

cmake_minimum_required(VERSION 3.20)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "-pedantic -Wall -Wextra")
cmake_path(SET LIB_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib")
include_directories(
    ${LIB_DIR}
)
#add_subdirectory("1/006-007/calculator")
#add_subdirectory("1/008/vec2D")
#add_subdirectory("1/009/logic_scheme")
#add_subdirectory("1/010/logic_elements")
#add_subdirectory("1/012/shape_primitives")
#add_subdirectory("1/013/fractals")
#add_subdirectory("1/CALCULATOR")
#add_subdirectory("1/014-015/Graph_lib_inheritance")
#add_subdirectory("1/018/least_squares")
#add_subdirectory("1/019/cell_field")
#add_subdirectory("1/020/chessboard")
#add_subdirectory("1/021/pointer_lesson")
# add_subdirectory("graphic_calculator/testing")
add_subdirectory("graphic_calculator")
# add_subdirectory("graphic_calculator")
add_subdirectory("1/022/list_lesson")
# add_subdirectory("1/023/tracer_lesson")
# add_subdirectory("1/024-025/template_lesson")
# add_subdirectory("1/027")

